--- a/scissor/templates/login.html
+++ b/scissor/templates/login.html
@@ -22,9 +22,11 @@
 </form>
 <br>
 <div align="center">
+    <a href="/forgot_password"><button  type="button" class="btn-qr">Forgot password?</button></a>
+</div>
+<p></p>
+<div align="right">
     <a href="/home"><button type="button" class="btn-outline">BACK</button></a>
 </div>
-<div align="right">
-    <a href="/signup"><button type="button" class="btn-qr">SIGN UP</button></a>
-</div>
 {% endblock %}
+
