--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -17,6 +17,8 @@
             {% if current_user.is_authenticated %}
             <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/dashboard">DASHBOARD</a></h4>
             <br>
+            <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/analytics">ANALYTICS</a></h4>
+            <br>
             <h4><a class="nav-item nav-link h6" style="color: #4bb4ff" align="center" href="/home">HOME</a></h4>
             <br>
             <h4><a class="nav-item nav-link h6" style="color: rgba(255, 85, 85, 0.971);" align="center" href="/logout">LOGOUT</a></h4>
