--- a/scissor/static/main.css
+++ b/scissor/static/main.css
@@ -71,6 +71,18 @@
     border-radius: 10px; 
 }
 
+.transparent-box-2 {
+    background-color: rgba(255, 255, 255, 0); 
+    border: 2px solid rgb(69, 212, 56); 
+    border-radius: 10px;
+    padding: 20px;
+    max-width: 80%; 
+    max-height: 80%; 
+    margin: auto; 
+    overflow: auto; 
+}
+
+
 .btn-edit {
     border: solid rgb(246, 217, 34);
     color: rgb(246, 217, 34);
@@ -135,4 +147,15 @@
     display: inline-block;
     border-radius: 5px;
     padding: 5px;
+}
+
+#myChart {
+    max-width: 100%; 
+    height: auto;
+}
+
+.chart-container {
+    width: 80%; 
+    height: 80%; 
+    margin: auto; 
 }
