--- a/scissor/templates/base.html
+++ b/scissor/templates/base.html
@@ -52,6 +52,7 @@
     <div id="emoji3" style="position: fixed; pointer-events: none;">✂️</div>
     <div id="emoji4" style="position: fixed; pointer-events: none;">✂️</div>
     <div id="emoji5" style="position: fixed; pointer-events: none;">✂️</div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
     <script>
       // Check if device is mobile
@@ -86,7 +87,6 @@
     </script>
 
     {% if message and message != 'None' %}
-   <!-- jQuery included above other JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script>
         $(document).ready(function() {
@@ -102,7 +102,7 @@
             }
             // Show the modal
             $('#notificationModal').modal('show');
-            // Hide the modal after 3 seconds
+            // Hide the modal after 1 second
             setTimeout(function() {
               $('#notificationModal').modal('hide');
             }, 1000);
