--- a/scissor/templates/dashboard.html
+++ b/scissor/templates/dashboard.html
@@ -2,6 +2,7 @@
 {% block title %}Dashboard{% endblock %} 
 {% block content%}
     <br>
+
     <h1 align="center" style="color:papayawhip">{% block header %}RECENT SHORT URLS{% endblock %}</h1>
     <div id="urls">
         {% for url in urls %}
@@ -21,7 +22,9 @@
             </div>
         </div>
         {% endfor %}
+    </div>
     <br>
+
     <h1 align="center" style="color:papayawhip">{% block header_custom_urls %}RECENT CUSTOM URLS{% endblock %}</h1>
     <div id="custom_urls">
         {% for url in custom_urls %}
@@ -43,6 +46,7 @@
         </div>
         {% endfor %}
     </div>
+
     <script>
         function toggleQR(urlKey) {
             var qrDiv = document.getElementById("qr_" + urlKey);
@@ -58,6 +62,7 @@
             }
         }
     </script>
+
     {% block footer %}
     {% if current_user.is_authenticated %}
     <br>
@@ -77,4 +82,5 @@
     <br>
     {% endif %}
     {% endblock %} 
+
 {% endblock %}
