added routes for logged in home page

--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -19,6 +19,21 @@
                 <br>
                 <br>
             </p>
+            <br>
+            <div align="center">
+            <a href="/shortenurl">
+                <button type="button" class="btn-outline-custom">
+                SHORTEN URL
+                </button></a>
+            </div>
+            <br>
+            <div align="center">
+            <a href="/customurl"
+                ><button type="button" class="btn-outline-custom">
+                CUSTOM URL
+                </button></a>
+            </div>
+            <br>
         </div>
 {% else %}
     <br>
