--- a/scissor/templates/edit.html
+++ b/scissor/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Edit{% endblock %}
 {% block content %}
-<form action="{{url_for('views.update', url_key=url.custom_short_url)}}" method="POST" class="form-container">
+<form method="POST" class="form-container">
     <br>
     <h1 align="center" style="color:papayawhip">SHORTEN URL</h1>
     <form method="POST">
