--- a/scissor/templates/forgot_password.html
+++ b/scissor/templates/forgot_password.html
@@ -3,10 +3,12 @@
 {% block content %}
 <form method="POST">
     <br>
-    <h1 align="center" style="color:papayawhip"> Forgot your password? </h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>FORGOT YOUR PASSWORD?</b></h1>
+    <br>
+    <br>
     <div class="form-group">
         <fieldset>
-            <label for="email" style="color:papayawhip"><b>EMAIL:</b></label>
+            <label for="email" style="color:lime"><b>EMAIL:</b></label>
             <input type="email" name="email" id="email" class="form-control btn-box" placeholder="Enter your Email" required>
         </fieldset>
         <br>
