--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -5,8 +5,8 @@
     <br>
     <br>
     <br>
-        <div align="center" class="about-text" style="color:papayawhip">
-            <h1 align="center"><b>SHORTEN. SIMPLIFY. SHARE.</b></h1>
+    <div align="center" class="about-text" style="color:lime;">
+            <h1 align="center" style=" animation: slideInAndOut 10s linear infinite;"><b>SHORTEN. SIMPLIFY. SHARE.</b></h1>
             <br>
             <p>
                 We believe in keeping things simple, so you can focus on what matters most.
@@ -39,8 +39,8 @@
     <br>
     <br>
     <br>
-        <div align="center" class="about-text" style="color:papayawhip">
-            <h1 align="center"><b>SHORTEN. SIMPLIFY. SHARE.</b></h1>
+        <div align="center" class="about-text" style="color:lime">
+            <h1 align="center" style=" animation: slideInAndOut 10s linear infinite;"><b>SHORTEN. SIMPLIFY. SHARE.</b></h1>
             <br>
             <p>
                 We believe in keeping things simple, so you can focus on what matters most.
