--- a/scissor/templates/reset_password.html
+++ b/scissor/templates/reset_password.html
@@ -3,10 +3,10 @@
 {% block content %}
 <form method="POST">
     <br>
-    <h1 align="center" style="color:papayawhip"> Reset your password </h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>RESET YOUR PASSWORD</b></h1>
     <div class="form-group">
         <fieldset>
-            <label for="password" style="color:papayawhip"><b>New Password:</b></label>
+            <label for="password" style="color:lime"><b>New Password:</b></label>
             <input type="password" name="password" id="password" class="form-control btn-box" placeholder="Enter new Password" required>
         </fieldset>
         <br>
