--- a/scissor/templates/shortenurl.html
+++ b/scissor/templates/shortenurl.html
@@ -2,20 +2,20 @@
 {% block title %}Home{% endblock %}
 {% block content %} 
 <br>
-    <h1 align="center" style="color:papayawhip">SHORTEN URL</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>SHORTEN URL</b></h1>
+    <br>
+    <br>
     <form method="POST">
         <br>
-            <div><h5 style="color:papayawhip"><b>original_url:</b></h5>
+            <div><h5 style="color:lime"><b>original_url:</b></h5>
                 <input name="text" id="text" class="form-control btn-box"></input>
             </div>
         <br />
-        <br>
             <div align="center">
                 <button type="submit" class="btn-outline-custom">SHORTEN</button>
             </div>
         <br />
     </form>
-<br />
 <div align="center">
     <a href="/dashboard"><button type="button" class="btn-outline">BACK</button></a>
 </div>
