--- a/scissor/templates/signup.html
+++ b/scissor/templates/signup.html
@@ -3,25 +3,27 @@
 {% block content %}
 <form method="POST">
     <br>
-    <h1 align="center" style="color:papayawhip">SIGN UP</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>SIGN UP</b></h1>
+    <br>
+    <br>
     <div class="form-group">
         <fieldset>
-            <label for="username" style="color:papayawhip"><b>USERNAME:</b></label>
+            <label for="username" style="color:lime"><b>USERNAME:</b></label>
             <input type="text" name="username" id="username" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="email" style="color:papayawhip"><b>EMAIL:</b></label>
+            <label for="email" style="color:lime"><b>EMAIL:</b></label>
             <input type="email" name="email" id="email" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password1" style="color:papayawhip"><b>PASSWORD:</b></label>
+            <label for="password1" style="color:lime"><b>PASSWORD:</b></label>
             <input type="password" name="password1" id="password1" class="form-control btn-box" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password2" style="color:papayawhip"><b>CONFIRM PASSWORD:</b></label>
+            <label for="password2" style="color:lime"><b>CONFIRM PASSWORD:</b></label>
             <input type="password" name="password2" id="password2" class="form-control btn-box" required>
         </fieldset>
         <br>
