--- a/scissor/templates/dashboard.html
+++ b/scissor/templates/dashboard.html
@@ -3,11 +3,12 @@
 {% block content%}
     <br>
 
-    <h1 align="center" style="color:papayawhip">{% block header %}RECENT SHORT URLS{% endblock %}</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;">{% block header %}<b>RECENT SHORT URLS</b>{% endblock %}</h1>
+    <br>
     <div id="urls">
         {% for url in urls %}
         <div class="transparent-box">
-            <div align="center" style="color: papayawhip;">
+            <div align="center" style="color: lime;">
                 <a href="/dashboard{{url.user.email}}"></a>
                 <p><h5>Original URL: <a class="my-link" href="{{url.original_url}}" target="_blank">{{url.original_url}}</a></h5></p>
                 <p><h5>Shortened URL: <a class="my-link" href="http://{{ server_name }}/{{url.short_url}}" target="_blank">{{ server_name }}/{{url.short_url}}</a></h5></p>
@@ -24,12 +25,14 @@
         {% endfor %}
     </div>
     <br>
+    <br>
 
-    <h1 align="center" style="color:papayawhip">{% block header_custom_urls %}RECENT CUSTOM URLS{% endblock %}</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;">{% block header_custom_urls %}<b>RECENT CUSTOM URLS</b>{% endblock %}</h1>
+    <br>
     <div id="custom_urls">
         {% for url in custom_urls %}
         <div class="transparent-box">
-            <div align="center" style="color: papayawhip;">
+            <div align="center" style="color: lime;">
                 <a href="/dashboard{{url.user.email}}"></a>
                 <p><h5>Original URL: <a class="my-link" href="{{url.original_url}}" target="_blank">{{url.original_url}}</a></h5></p>
                 <p><h5>Custom Shortened URL: <a class="my-link" href="http://{{ server_name }}/{{url.custom_short_url}}" target="_blank">{{ server_name }}/{{url.custom_short_url}}</a></h5></p>
