--- a/scissor/templates/edit.html
+++ b/scissor/templates/edit.html
@@ -3,20 +3,22 @@
 {% block content %}
 <form method="POST" class="form-container">
     <br>
-    <h1 align="center" style="color:papayawhip">SHORTEN URL</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>EDIT CUSTOM URL</b></h1>
+    <br>
+    <br>
     <form method="POST">
         <br>
-            <div><h5 style="color:papayawhip"><b>original_url:</b></h5>
+            <div><h5 style="color:lime"><b>original_url:</b></h5>
                 <input type="text" name="original_url" class="form-control btn-box" value="{{ url.original_url }}"></input>
             </div>
         <br />
         <br>
-            <div><h5 style="color:papayawhip"><b>old_shortened_url:</b></h5>
+            <div><h5 style="color:lime"><b>old_shortened_url:</b></h5>
                 <input type="text" name="custom_short_url" class="form-control btn-box" value="{{ host }}{{ url.custom_short_url }}" ></input>
             </div>
         <br />
         <br>
-            <div><h5 style="color:papayawhip"><b>new_shortened_url:</b></h5>
+            <div><h5 style="color:lime"><b>new_shortened_url:</b></h5>
                 <input type="text" class="form-control btn-box" placeholder="{{ url.custom_short_url }}" name="custom_path" required></input>
             </div>
         <br />
