--- a/scissor/templates/login.html
+++ b/scissor/templates/login.html
@@ -3,15 +3,17 @@
 {% block content %} 
 <form method="POST">
     <br>
-    <h1 align="center" style="color:papayawhip"> HELLO THERE!</h1>
+    <h1 align="center" style="color:lime; animation: slideInAndOut 10s linear infinite;"><b>HELLO THERE!</b></h1>
+    <br>
+    <br>
     <div class="form-group">
         <fieldset>
-            <label for="identifier" style="color:papayawhip"><b>EMAIL/USERNAME:</b></label>
+            <label for="identifier" style="color:lime"><b>EMAIL/USERNAME:</b></label>
             <input type="text" name="identifier" id="identifier" class="form-control btn-box" placeholder="Enter Email or Username" required>
         </fieldset>
         <br>
         <fieldset>
-            <label for="password" style="color:papayawhip"><b>PASSWORD:</b></label>
+            <label for="password" style="color:lime"><b>PASSWORD:</b></label>
             <input type="password" name="password" id="password" class="form-control btn-box" placeholder="Enter Password" required>
         </fieldset>
         <br>
