--- a/scissor/templates/mystery.html
+++ b/scissor/templates/mystery.html
@@ -6,7 +6,7 @@
 <br>
 <br>
     <div class="transparent-box-2">
-        <img src="{{ image_src }}" alt="Mystery Data" align="center" style="max-width: 100%; height: auto;">
+        <img src="{{ image_url }}" alt="IPFS Image" align="center" style="max-width: 100%; height: auto;">
     </div>
     <br>
     <div align="center">
