--- a/scissor/templates/dashboard.html
+++ b/scissor/templates/dashboard.html
@@ -12,10 +12,31 @@
                 <a href="/dashboard{{url.user.email}}"></a>
                 <p><h5>Original URL: <a class="my-link" href="{{url.original_url}}" target="_blank">{{url.original_url}}</a></h5></p>
                 <p><h5>Shortened URL: <a class="my-link" href="http://{{ server_name }}/{{url.short_url}}" target="_blank">{{ server_name }}/{{url.short_url}}</a></h5></p>
-                <div>
+                <div> 
                     <button align="center" type="button" class="btn-qr" onclick="toggleQR('{{ url.short_url }}')">QR Code</button>
                     <a href="{{ url_for('views.delete', url_key=url.short_url) }}"><button type="button" class="btn-delete">Delete</button></a>
                 </div>
+                <br>
+            <!-- Social Media Sharing Buttons -->
+            <div>
+                    <div class="btn-edit"><a href="https://twitter.com/intent/tweet?url=http://{{ server_name }}/{{url.short_url}}&text=Check%20out%20my%20shortened%20URL%21"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="https://nftstorage.link/ipfs/bafkreibclamdrp56gf7xfvdzwdpcgd4cq4iyl3437e3xld4osnksiriq5u" alt="Twitter Share" width="32" height="32">
+                        </a>
+                    </div>
+
+                    <div class="btn-edit"><a href="https://www.facebook.com/sharer/sharer.php?u=http://{{ server_name }}/{{url.short_url}}"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="https://nftstorage.link/ipfs/bafkreicoa4bnkh2vym2y36fo3gv5hbacz2kx5ypdlcaff7mwgslrbruadm" alt="Facebook Share" width="32" height="32">
+                        </a>
+                    </div>
+
+                    <div class="btn-edit"><a href="https://www.instagram.com/?url=http://{{ server_name }}/{{url.short_url}}"
+                        target="_blank" rel="noopener noreferrer">
+                        <img src="https://nftstorage.link/ipfs/bafkreidcq65h2etudnvr5gm5wbkdggf5isrwmgjrph7bbtzuhbmv5ucj2q" alt="Instagram Share" width="32" height="32">
+                        </a>
+                    </div>
+            </div>
                 <div id="qr_{{ url.short_url }}" style="display: none;">
                     <br><p><img src="" alt="QR Code"></p>
                 </div>
@@ -40,6 +61,27 @@
                     <button align="center" type="button" class="btn-qr" onclick="toggleQR('{{ url.custom_short_url }}')">QR Code</button>
                     <a href="{{ url_for('views.update', url_key=url.custom_short_url) }}"><button type="button" class="btn-edit">Edit</button></a>
                     <a href="{{ url_for('views.delete', url_key=url.custom_short_url) }}"><button type="button" class="btn-delete">Delete</button></a>
+                </div>
+                <br>
+                <!-- Social Media Sharing Buttons -->
+                <div>
+                        <div class="btn-edit"><a href="https://twitter.com/intent/tweet?url=http://{{ server_name }}/{{url.custom_short_url}}&text=Check%20out%20my%20shortened%20URL%21"
+                            target="_blank" rel="noopener noreferrer">
+                            <img src="https://nftstorage.link/ipfs/bafkreibclamdrp56gf7xfvdzwdpcgd4cq4iyl3437e3xld4osnksiriq5u" alt="Twitter Share" width="32" height="32">
+                            </a>
+                        </div>
+    
+                        <div class="btn-edit"><a href="https://www.facebook.com/sharer/sharer.php?u=http://{{ server_name }}/{{url.custom_short_url}}"
+                            target="_blank" rel="noopener noreferrer">
+                            <img src="https://nftstorage.link/ipfs/bafkreicoa4bnkh2vym2y36fo3gv5hbacz2kx5ypdlcaff7mwgslrbruadm" alt="Facebook Share" width="32" height="32">
+                            </a>
+                        </div>
+    
+                        <div class="btn-edit"><a href="https://www.instagram.com/?url=http://{{ server_name }}/{{url.custom_short_url}}"
+                            target="_blank" rel="noopener noreferrer">
+                            <img src="https://nftstorage.link/ipfs/bafkreidcq65h2etudnvr5gm5wbkdggf5isrwmgjrph7bbtzuhbmv5ucj2q" alt="Instagram Share" width="32" height="32">
+                            </a>
+                        </div>
                 </div>
                 <div id="qr_{{ url.custom_short_url }}" style="display: none;">
                     <br><p><img src="" alt="QR Code"></p>
