Fixed a bug that allows users use links as custom url, fixed a bug that allows different users share the same short url, improved ui

--- a/scissor/templates/customurl.html
+++ b/scissor/templates/customurl.html
@@ -12,7 +12,7 @@
             </div>
         <br />
         <br>
-            <div><h5 style="color:lime"><b>custom_short_url:</b></h5>
+            <div><h5 style="color:lime"><b>Enter short_path:</b></h5>
                 <input name="text2" id="text2" class="form-control btn-box"></input>
             </div>
         <br />
