--- a/scissor/templates/edit.html
+++ b/scissor/templates/edit.html
@@ -13,12 +13,12 @@
             </div>
         <br />
         <br>
-            <div><h5 style="color:lime"><b>old_shortened_url:</b></h5>
-                <input type="text" name="custom_short_url" class="form-control btn-box" value="{{ host }}{{ url.custom_short_url }}" ></input>
+            <div><h5 style="color:lime"><b>old_short_path:</b></h5>
+                <input type="text" name="custom_short_url" class="form-control btn-box" value="{{ url.custom_short_url }}" ></input>
             </div>
         <br />
         <br>
-            <div><h5 style="color:lime"><b>new_shortened_url:</b></h5>
+            <div><h5 style="color:lime"><b>Enter new_short_path:</b></h5>
                 <input type="text" class="form-control btn-box" placeholder="{{ url.custom_short_url }}" name="custom_path" required></input>
             </div>
         <br />
