--- a/scissor/templates/home.html
+++ b/scissor/templates/home.html
@@ -5,7 +5,7 @@
     <br>
     <br>
     <br>
-    <div align="center" class="about-text" style="color:lime;">
+    <div align="center" class="about-text" style="color:lime">
             <h1 align="center" style=" animation: slideInAndOut 10s linear infinite;"><b>SHORTEN. SIMPLIFY. SHARE.</b></h1>
             <br>
             <p>
